# NeuralNetwork

./: pyproject.toml
src/: simpleCNN.py  simpleCNN_FashionMNIST.py  simpleFC.py  train.py
src/core/: test.py  train.py
src/models/: simple_fc.py
src/utils/: dataloader.py
